# showrunner

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: quality-rubric.md
docs/plans/: 2026-03-19-ai-video-format-design.md  2026-03-19-ai-video-format-implementation.md
src/showrunner/: __init__.py  config.py  events.py  feedback.py  pipeline.py  plan.py
src/showrunner/cli/: main.py
src/showrunner/formats/: __init__.py  base.py  registry.py
src/showrunner/formats/ai_video/: __init__.py  assets.py  planner.py
src/showrunner/formats/faceless_explainer/: __init__.py  assets.py  composer.py  lint.py  planner.py
src/showrunner/music/: __init__.py  catalog.py  cli.py  ducking.py  picker.py
src/showrunner/providers/llm/: anthropic.py  base.py  openai.py
src/showrunner/styles/: __init__.py  resolver.py
tests/: test_ai_video_assets.py  test_ai_video_format.py  test_ai_video_integration.py  test_ai_video_planner.py  test_cli.py  test_config.py  test_events.py  test_faceless_assets.py  test_faceless_composer.py  test_faceless_format.py  test_faceless_lint.py  test_faceless_planner.py  test_feedback.py  test_formats_registry.py  test_integration.py  test_llm_anthropic.py  test_llm_openai.py  test_music_catalog.py  test_music_cli.py  test_music_ducking.py  test_music_picker.py  test_pipeline.py  test_pipeline_ai_video.py  test_plan.py  test_providers_base.py  test_public_api.py  test_render_ffmpeg.py  test_render_remotion.py  test_styles.py  test_tts_elevenlabs.py  test_tts_kokoro.py  test_video_gemini.py  test_video_minimax.py  test_video_provider_base.py
(+56 files in other folders)
